z-index corrections (header)

--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,6 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index: 999;
   height: 63px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
   z-index: 2;
@@ -185,7 +184,6 @@ body {
 .navbar .navbar__logo {
   position: absolute;
   width: 162px;
-  z-index: 1;
 }
 
 .footer {
