--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,7 +3,6 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    z-index: 999;
     height: 63px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
     z-index: 2;
@@ -23,6 +22,5 @@
     .navbar__logo {
         position: absolute;
         width: 162px;
-        z-index: 1;
     }
 }
